cmake_minimum_required(VERSION 3.24)
project(projet_ C)

set(CMAKE_C_STANDARD 11)

add_executable(projet_ main.c list.c list.h cell.c cell.h complementaire.h complementaire.c
        agenda.c
        agenda.h
        agenda.h
        agenda_list.c
        agenda_list.h
        agenda_list.h
noms.txt)
